# gtsam

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  .readthedocs.yml  .travis.python.sh  .travis.sh  .travis.yml  AUTHORS  CMakeCache.txt  CMakeLists.txt  COPYING  DEVELOP.md  DOCS.md  Doxyfile  DoxygenLayout.xml  GTSAM-Concepts.md  INSTALL  INSTALL.md  LICENSE  MH_example_tutorial.md  MH_plot_city10000.m  MH_plot_victoriaPark.m  Makefile.am  README  README.md  README_MH.md  THANKS  USAGE  USAGE.md  USAGE_MH.md  Using-GTSAM-EXPORT.md  aminclude.am  appveyor.yml  bitbucket-pipelines.yml  config.h  config.h.in  configure.ac  gtsam-broken.h  (+17 more)
CppUnitLite/: CMakeLists.txt  Failure.cpp  Failure.h  Makefile  Makefile.am  Makefile.in  SimpleString.cpp  SimpleString.h  Test.cpp  Test.h  TestHarness.h  TestRegistry.cpp  TestRegistry.h  TestResult.cpp  TestResult.h
base/: BTree.h  DSF.h  DSFVector.cpp  DenseQR.cpp  DenseQR.h  DenseQRUtil.cpp  DenseQRUtil.h  FastMap.h  FastSet.h  FixedVector.h  Lie-inl.h  Lie.h  LieScalar.h  LieVector.cpp  LieVector.h  Makefile.am  Makefile.in  Matrix-inl.h  Matrix.cpp  Matrix.h  SPQRUtil.cpp  SPQRUtil.h  Testable.h  TestableAssertions.h  Vector.cpp  blockMatrices.h  lieProxies.h  numericalDerivative.h  svdcmp.cpp  svdcmp.h  testDSF.cpp  timeMatrix.cpp  timing.cpp  timing.h  types.h
cmake/: CMakeLists.txt  Config.cmake.in  FindBoost.cmake  FindCUDAToolkit.cmake  FindClonedEigency.cmake  FindCppUnitLite.cmake  FindCython.cmake  FindEigency.cmake  FindGTSAM.cmake  FindGooglePerfTools.cmake  FindMETIS.cmake  FindMKL.cmake  FindNumPy.cmake  FindSuiteSparse.cmake  FindTBB.cmake  FindWrap.cmake  GTSAMCMakeToolsConfig.cmake  GtsamAddPch.cmake  GtsamBuildTypes.cmake  GtsamCythonWrap.cmake  GtsamMakeConfigFile.cmake  GtsamMatlabWrap.cmake  GtsamPrinting.cmake  GtsamPybindWrap.cmake  GtsamPythonWrap.cmake  GtsamTesting.cmake  GtwrapUtils.cmake  HandleAllocators.cmake  HandleBoost.cmake  HandleCCache.cmake  HandleCPack.cmake  HandleCephes.cmake  HandleCuSparse.cmake  HandleEigen.cmake  HandleFinalChecks.cmake  HandleGeneralOptions.cmake  HandleGlobalBuildFlags.cmake  HandleMetis.cmake  HandleOpenMP.cmake  HandlePerfTools.cmake  (+15 more)
colamd/: Makefile  Makefile.am  Makefile.in  UFconfig.h  ccolamd.c  ccolamd.h  colamd.c  main.cpp
cpp/: BTree.h  BayesChain-inl.h  BayesChain.h  BayesNet-inl.h  BayesNet.h  BayesNetPreconditioner.cpp  BayesNetPreconditioner.h  BayesTree-inl.h  BayesTree.h  BearingFactor.h  BearingRangeFactor.h  BetweenFactor.h  BinaryConditional.h  Cal3_S2.cpp  Cal3_S2.h  CalibratedCamera.cpp  CalibratedCamera.h  ChordalBayesNet.cpp  ChordalBayesNet.h  Conditional.h  ConditionalGaussian.cpp  ConditionalGaussian.h  ConstrainedChordalBayesNet.cpp  ConstrainedChordalBayesNet.h  ConstrainedConditionalGaussian.cpp  ConstrainedConditionalGaussian.h  ConstrainedLinearFactorGraph.cpp  ConstrainedLinearFactorGraph.h  ConstrainedNonlinearFactorGraph.cpp  ConstrainedNonlinearFactorGraph.h  ConstraintOptimizer.cpp  ConstraintOptimizer.h  ControlConfig.cpp  ControlConfig.h  ControlGraph.cpp  ControlGraph.h  ControlPoint.cpp  ControlPoint.h  DSF.h  DSFVector.cpp  (+310 more)
cython/: CMakeLists.txt  README.md  TODO.md  build.sh  gtsam.h  gtsam_short.h  install.sh  requirements.txt  setup.py  setup.py.in  test_gtsam.py  tests.py
doc/: .gitignore  CMakeLists.txt  CodingGuidelines.docx  CodingGuidelines.lyx  Doxyfile  Doxyfile.in  DoxygenLayout.xml  EssentialMatrix.lyx  Hybrid.lyx  ImuFactor.lyx  LieGroups.lyx  cholesky.lyx  common_macros.tex  gtsam-coordinate-frames.lyx  gtsam.bib  gtsam.lyx  macros.lyx  math.lyx  refs.bib  sphere.lyx  stats.html  trustregion.bib  trustregion.lyx
examples/: CMakeLists.txt  CameraResectioning.cpp  CombinedImuFactorsExample.cpp  CreateSFMExampleData.cpp  DiscreteBayesNetExample.cpp  DiscreteBayesNet_FG.cpp  FisheyeExample.cpp  FixedLagSmootherExample.cpp  GNCExample.cpp  HMMExample.cpp  IMUKittiExampleGPS.cpp  ISAM2Example_SmartFactor.cpp  ISAM2_SmartFactorStereo_IMU.cpp  ISAM2_SmartFactor_valgrind.cpp  ISAM2_TEST_01.cpp  ISAM2_TEST_03.cpp  ISAM2_TEST_city10000.cpp  ISAM2_TEST_victoriaPark.cpp  ImuFactorExample2.cpp  ImuFactorsExample.cpp  ImuFactorsExample2.cpp  InverseKinematicsExampleExpressions.cpp  Line3Example.cpp  LineData.h  LocalizationExample.cpp  LocalizationExample2.cpp  METISOrderingExample.cpp  MH_ISAM2_TEST_01.cpp  MH_ISAM2_TEST_city10000.cpp  MH_ISAM2_TEST_victoriaPark.cpp  Makefile  Makefile.am  OdometryExample.cpp  PlanarSLAMExample  PlanarSLAMExample.cpp  PlanarSLAMExample_easy.cpp  PlanarSLAMExample_selfcontained.cpp  PlanarSLAMSelfContained.cpp  PlanarSLAMSelfContained_advanced.cpp  Pose2SLAMExample.cpp  (+63 more)
geometry/: Cal3_S2.cpp  Cal3_S2.h  CalibratedCamera.cpp  CalibratedCamera.h  Makefile.am  Makefile.in  Point2.cpp  Point2.h  Point3.cpp  Point3.h  Pose2.cpp  Pose2.h  Pose3.cpp  Pose3.h  Rot2.cpp  Rot2.h  Rot3.cpp  Rot3.h  SimpleCamera.cpp  SimpleCamera.h  StereoCamera.cpp  StereoCamera.h  StereoPoint2.cpp  StereoPoint2.h  Tensor1.h  Tensor1Expression.h  Tensor2.h  Tensor2Expression.h  Tensor3.h  Tensor3Expression.h  Tensor4.h  Tensor5.h  Tensor5Expression.h  projectiveGeometry.cpp  projectiveGeometry.h  tensorInterface.cpp  tensorInterface.h  tensors.h  testCal3_S2.cpp  testPose2.cpp  (+4 more)
gtsam/: CMakeLists.txt  Makefile.am  config.h.in  dllexport.h  global_includes.h  groups.dox  gtsam.i  mainpage.dox  precompiled_header.cpp  precompiled_header.h
gtsam_unstable/: CMakeLists.txt  gtsam_unstable.dox  gtsam_unstable.h  gtsam_unstable.i  mainpage.dox
inference/: BayesNet-inl.h  BayesNet.h  BayesNetPreconditioner.h  BayesTree-inl.h  BayesTree.h  BinaryConditional.h  ClusterTree-inl.h  ClusterTree.h  Conditional.h  EliminationTree-inl.h  EliminationTree.h  Factor-inl.h  Factor.cpp  Factor.h  FactorBase-inl.h  FactorGraph-inl.h  FactorGraph.h  GaussianBayesNet.cpp  GaussianFactorGraph.cpp  GaussianISAM.cpp  GaussianJunctionTree-inl.h  GenericMultifrontalSolver-inl.h  GenericMultifrontalSolver.h  GenericSequentialSolver-inl.h  GenericSequentialSolver.h  ISAM-inl.h  ISAM.h  ISAM2-inl.h  ISAM2.h  IndexConditional.h  Key.h  (+47 more)
(+4625 files in other folders)
